@@ -6,7 +6,8 @@
 class RouterPost : public Router
 {
 public:
-    RouterPost(Router *parent);
+    RouterPost(Router* parent): Router(parent) {}
+    RouterPost(QString root = ""): Router(root) {}
 
 protected:
     bool route(FCGX_Request &req, QString url, Obj *obj);
